--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <body>
     <ul class="list">
         <li class="item">
+            <img class="item_img" src="./img/dana.png" alt="img">      
+            <a class="item_link" target="_blank" href="https://iv77777.github.io/dana/">Сайт для Дани</a>
+        </li>
+        <li class="item">
             <img class="item_img" src="./img/cross.png" alt="img">      
             <a class="item_link" target="_blank" href="https://iv77777.github.io/cross/">Інтернет магазин тест-1</a>
         </li>
