--- a/index.html
+++ b/index.html
@@ -13,67 +13,11 @@
     <link rel="stylesheet" href="style.css?_1">
 </head>
 <body>
-    <ul class="list">
-        <li class="item animation">
-            <img class="item_img" src="./img/animation.png" alt="img">      
-            <a class="item_link" target="_blank" href="https://iv77777.github.io/animation/">Анімація</a>
-        </li>
-        <li class="item animation">
-            <img class="item_img" src="./img/dana.png" alt="img">      
-            <a class="item_link" target="_blank" href="https://iv77777.github.io/dana/">Сайт для Дани</a>
-        </li>
-        <li class="item animation">
-            <img class="item_img" src="./img/cross.png" alt="img">      
-            <a class="item_link" target="_blank" href="https://iv77777.github.io/cross/">Інтернет магазин тест-1</a>
-        </li>
-        <li class="item animation">
-            <img class="item_img" src="./img/testSite.png" alt="img">      
-            <a class="item_link" target="_blank" href="https://iv77777.github.io/testSite/">Інтернет магазин тест-2</a>
-        </li>
-        <li class="item animation">
-            <img class="item_img" src="./img/zlatmax.png" alt="img">      
-            <a class="item_link" target="_blank" href="https://iv77777.github.io/zlatmax/">zlatmax</a>
-        </li>
-        <li class="item animation">
-            <img class="item_img" src="./img/dictionary.png" alt="img">      
-            <a class="item_link" target="_blank" href="https://iv77777.github.io/dictionary/">Словник English</a>
-        </li>
-        <li class="item animation">
-            <img class="item_img" src="./img/mL-100.png" alt="img">      
-            <a class="item_link" target="_blank" href="https://iv77777.github.io/mL-100/">mL-100</a>
-        </li>
-        <li class="item animation">
-            <img class="item_img" src="./img/f.png" alt="img">      
-            <a class="item_link" target="_blank" href="https://iv77777.github.io/F/">Перевод F/C</a>
-        </li>
-        <li class="item animation">
-            <img class="item_img" src="./img/touch.png" alt="img">      
-            <a class="item_link" target="_blank" href="https://iv77777.github.io/touch/">touch Секундомір</a>
-        </li>
-        <li class="item animation">
-            <img class="item_img" src="./img/RedRock.png" alt="img">      
-            <a class="item_link" target="_blank" href="https://iv77777.github.io/RedRock/">RedRock</a>
-        </li>
-        <li class="item animation">
-            <img class="item_img" src="./img/workC.png" alt="img">      
-            <a class="item_link" target="_blank" href="https://iv77777.github.io/workC/">workC</a>
-        </li>
-        <li class="item animation">
-            <img class="item_img" src="./img/scrolling.png" alt="img">      
-            <a class="item_link" target="_blank" href="https://iv77777.github.io/scrolling/">scrolling</a>
-        </li>
-        <li class="item animation">
-            <img class="item_img" src="./img/smoothScroll.png" alt="img">      
-            <a class="item_link" target="_blank" href="https://iv77777.github.io/smoothScroll/">smoothScroll</a>
-        </li>
-        <li class="item animation">
-            <img class="item_img" src="./img/scroll.png" alt="img">      
-            <a class="item_link" target="_blank" href="https://iv77777.github.io/scroll/">scroll</a>
-        </li>
-        <li class="item animation">
-            <img class="item_img" src="./img/scrollAll.png" alt="img">      
-            <a class="item_link" target="_blank" href="https://iv77777.github.io/scrollAll/">scrollAll</a>
-        </li>
+    <ul class="list" id="list_js">
+        
     </ul>  
+
+    <script src="./js/items.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
