--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="animation.css">
-    <link rel="stylesheet" href="style.css?_1">
+    <link rel="stylesheet" href="./css/reset.css?_3">
+    <link rel="stylesheet" href="./css/style.css?_3">
 </head>
 <body>
-    <ul class="list" id="list_js">
-        
-    </ul>  
+    
+    <ul class="list" id="list_js"></ul>  
 
-    <script src="./js/items.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="./js/items.js?_3"></script>
+    <script src="./js/script.js?_3"></script>
 </body>
 </html>
